# soap_server_example

./: Dockerfile_app  README.md  docker-compose.yml  grafana-dashboard.json  main.py  prometheus.yml  pyproject.toml
assets/: SolvencyVerification-wsdl-soapui-project.xml
contracts/: SolvencyDataTypes.xsd  SolvencyVerification.wsdl
docs/: ARCHITECTURE.md  MONITORING_SETUP.md  SolvencyVerification-BPMN.bpmn
loan_solvency_service/services/business_logic/: CreditScoringService.py  ExplanationService.py  SolvencyDecisionService.py  run_business_logic.py
loan_solvency_service/services/crud/: ClientDirectoryService.py  CreditBureauService.py  FinancialDataService.py  run_crud_services.py
loan_solvency_service/services/orchestration/: SolvencyVerificationService.py  run_orchestrator.py
loan_solvency_service/shared/: base_service.py  cache.py  datamodels.py  db_setup.py  metrics.py  minimal_server.py  soap_client.py
tests/integration/: test_orchestration.py  test_soap_client.py
tests/unit/: test_business_logic_services.py  test_crud_services.py
